Blender crashes when dragging a material (from the materials tab, Outliner, even Asset Browser) #90430

Closed
opened 2021-08-04 14:50:56 +02:00 by Pasang Bomjan · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-04 10:38, hash: add719e31a
Worked: (newest version of Blender that worked as expected)

Caused by effc048710

Short description of error
material_drag_crash.png

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-04 10:38, hash: `add719e31a` Worked: (newest version of Blender that worked as expected) Caused by effc048710 **Short description of error** ![material_drag_crash.png](https://archive.blender.org/developer/F10265243/material_drag_crash.png)
Author

Added subscriber: @Pasang

Added subscriber: @Pasang
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-08-04 17:03:21 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser removed their assignment 2021-08-04 17:42:44 +02:00
Member

Added subscribers: @JulianEisel, @Jeroen-Bakker

Added subscribers: @JulianEisel, @Jeroen-Bakker
Member

Also true for the Outliner.
Interestingly also true for dragging from the Asset browser ?!

Caused by effc048710

Havent followed in depth, but seems like WM_DRAG_ASSET is never set in these cases (even from the Asset Browser, UI_but_drag_set_asset is never called)

Will let the author/reviewer handle.

CC @Jeroen-Bakker
CC @JulianEisel

Also true for the Outliner. Interestingly also true for dragging from the Asset browser ?! Caused by effc048710 Havent followed in depth, but seems like `WM_DRAG_ASSET` is never set in these cases (even from the Asset Browser, `UI_but_drag_set_asset` is never called) Will let the author/reviewer handle. CC @Jeroen-Bakker CC @JulianEisel
Philipp Oeser changed title from Blender crashes when dragging a material from the materials tab to Blender crashes when dragging a material (from the materials tab, Outliner, even Asset Browser) 2021-08-04 17:46:03 +02:00
Julian Eisel self-assigned this 2021-08-05 12:07:40 +02:00
Member

Taking this over since Jeroen isn't there today.

I cannot recreate this when dragging from the asset browser. Besides that I see what's going on.

Taking this over since Jeroen isn't there today. I cannot recreate this when dragging from the asset browser. Besides that I see what's going on.

This issue was referenced by 02e0c6f42e

This issue was referenced by 02e0c6f42e76e2cd5d086bde336789991434eba5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90430
No description provided.