Fix T90430: Crash when dragging material

Was trying to get asset information even when there was none, i.e. when
the material wasn't an asset or not dragged from the Asset Browser.